Hello World Lesson 2 of 5

--- a/public/hello-world.html
+++ b/public/hello-world.html
@@ -5,6 +5,11 @@
 		<title> The Wacky World of Web Developers </title>
 	</head>
 	<body>
-		Hello from Codeup!
+		<h1> Hello from Codeup!</h1>
+			<p>      Welcome to my site.  I hope you find it very informative.  This site is <em>dedicated</em> to all those<br> <strong>wacky web developers</strong> out there.<br>I, like several other Codeup students, hope to be a developer soon.<br>So far we have learned how to write code in PHP.
+			</p>
+			<h2> My Favorite Quote </h2>
+			<p></p>
+			<blockquote><em>In order to succeed, your desire for success should be greater than your fear of failure.</em><br>  - Billy Cosby</blockquote>
 	</body>
 </html>
