Hello World updates

--- a/public/hello-world.html
+++ b/public/hello-world.html
@@ -5,11 +5,46 @@
 		<title> The Wacky World of Web Developers </title>
 	</head>
 	<body>
+		<a id="top"> </a>
 		<h1> Hello from Codeup!</h1>
 			<p>      Welcome to my site.  I hope you find it very informative.  This site is <em>dedicated</em> to all those<br> <strong>wacky web developers</strong> out there.<br>I, like several other Codeup students, hope to be a developer soon.<br>So far we have learned how to write code in PHP.
 			</p>
 			<h2> My Favorite Quote </h2>
 			<p></p>
 			<blockquote><em>In order to succeed, your desire for success should be greater than your fear of failure.</em><br>  - Billy Cosby</blockquote>
+				<h2> I'm Learing the LAMP Stack. </h2>
+					<ul>
+						<li> Linux </li>
+						<li> Apache </li>
+						<li> My SQL </li>
+						<li> PHP </li>
+					</ul>
+
+				<h2> My Top 5 Favorite Foods </h2>
+					<ol>
+						<li> Pizza </li>
+						<li> Kung Pao Chicken </li>
+						<li> Hamburgers </li>
+						<li> Fried Chicken </li>
+						<li> Chocolate Cake </li>
+					</ol>
+
+				<h2> Questions I'm Often Asked </h2>
+
+					<dl>
+						<dt>What do you do for a living?</dt>
+							<dd>I am an inventor.  I build solutions to peoples technical problems.</dd>
+						<dt>What is your dream job?</dt>
+							<dd>Doing something for pay that I'd love to do for free.</dd>
+					</dl>
+
+				<h2> My Favorite Websites </h2>
+					<ul>
+						<li><a href = "http://www.engadet.com" target="_blank">Go to Engadet</a>  </li>
+						<li><a href = "http://www.google.com" target="_blank">Go to Google</a>   </li>
+						<li><a href = "http://www.wired.com" target="_blank">Go to Wired</a>   </li>
+					</ul>
+
+				<a href="#top">Go to the top of the page </a>
 	</body>
 </html>
