Hello World Lesson with images

--- a/public/hello-world.html
+++ b/public/hello-world.html
@@ -45,6 +45,11 @@
 						<li><a href = "http://www.wired.com" target="_blank">Go to Wired</a>   </li>
 					</ul>
 
+				<h2> My Vehicle </h2>
+					<p>This is my dream vehicle just because it is cool design.</p>
+						<img src="img/BMW_i8.jpg" alt="BMWi8">
+						<p></p>
+
 				<a href="#top">Go to the top of the page </a>
 	</body>
 </html>
