--- a/public/my-first-form.html
+++ b/public/my-first-form.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+	<title> My First Form </title>
+</head>
+
 	<form method="GET" action="http://requestb.in/13xpwdz1">
 	    <p>
 	        <label for="username">Username</label>
