--- a/public/my-first-form.html
+++ b/public/my-first-form.html
@@ -8,14 +8,14 @@
 	<form method="GET" action="http://requestb.in/13xpwdz1">
 	    <p>
 	        <label for="username">Username</label>
-	        <input id="username" name="username" type="text">
+	        <input id="username" name="username" placeholder="Username" type="text">
 	    </p>
 	    <p>
 	        <label for="password">Password</label>
-	        <input id="password" name="password" type="password">
+	        <input id="password" name="password" placeholder="password" type="password">
 	    </p>
 	    <p>
-	        <input type="submit">
+	        <input type="submit" value="login">
 	    </p>
 	</form>
 
