--- a/public/my-first-form.html
+++ b/public/my-first-form.html
@@ -5,17 +5,17 @@
 	<title> My First Form </title>
 </head>
 
-	<form method="GET" action="http://requestb.in/13xpwdz1">
+	<form method="POST" action="http://requestb.in/13xpwdz1">
 	    <p>
 	        <label for="username">Username</label>
-	        <input id="username" name="username" placeholder="Username" type="text">
+	        <input id="username" name="username" placeholder="username" type="text">
 	    </p>
 	    <p>
 	        <label for="password">Password</label>
 	        <input id="password" name="password" placeholder="password" type="password">
 	    </p>
 	    <p>
-	        <input type="submit" value="login">
+	        <button type="submit">LOGIN BUTTON</button>
 	    </p>
 	</form>
 
