--- a/public/my-first-form.html
+++ b/public/my-first-form.html
@@ -4,7 +4,7 @@
 <head>
 	<title> My First Form </title>
 </head>
-
+	<h3> User Login </h3>
 	<form method="POST" action="http://requestb.in/13xpwdz1">
 	    <p>
 	        <label for="username">Username</label>
@@ -15,7 +15,31 @@
 	        <input id="password" name="password" placeholder="password" type="password">
 	    </p>
 	    <p>
-	        <button type="submit">LOGIN BUTTON</button>
+	        <button type="submit">login</button>
+	    </p>
+	</form>
+
+	<h3> Compose an Email </h3>
+
+	<form method="POST" action="http://requestb.in/13xpwdz1">
+	    <p>
+	        <label for="To">To:</label>
+	        <textarea id="To" name="To" rows="1" cols="30"></textarea>
+	    </p>
+	    <p>
+	        <label for="From">From:</label>
+	        <textarea id="From" name="From" rows="1" cols="30"></textarea>
+	    </p>
+	     <p>
+	        <label for="subject">Subject:</label>
+	        <textarea id="subject" name="subject" rows="1" cols="30"></textarea>
+	    </p>
+	     <p>
+	        <label for="email_body">Body</label>
+	        <textarea id="email_body" name="email_body" rows="15" cols="40"> Compose Your Email </textarea>
+	    </p>
+	    <p>
+	        <input type="submit" value="send" />
 	    </p>
 	</form>
 
