Todo List with forms

--- a/public/todo-list.html
+++ b/public/todo-list.html
@@ -17,7 +17,7 @@
 				<li>Take the kids to school</li>
 			</ul>
 
-			<p>Enter your item then select your options.</p>	
+			<p>Enter your item or selection then choose your option.</p>	
 
 			<form method="POST" action="">
 				<p> 
