--- a/public/while-loop-js.html
+++ b/public/while-loop-js.html
@@ -4,10 +4,10 @@
 </head>
 <body>
 	<script>
-		var $i = 2;
+		var i = 2;
 		while($i <= 65546){
-				console.log($i);
-				$i = $i * 2;
+				console.log(i);
+				i = i * 2;
 		}
 	</script>
 </body>
