Break and continue
solution without having to use break and continue

--- a/public/break-continue-js.html
+++ b/public/break-continue-js.html
@@ -8,6 +8,8 @@
 				var random_number = Math.floor((Math.random()*50)+1);
 			} while (random_number % 2 == 0);
 
+			console.log("Random odd number to skip is " + random_number);
+
 			for (var number = 1; number <= 50; number = number + 2) {
 				
 				if (number != random_number){
