Arrays intro js

--- a/public/arrays-intro-js.html
+++ b/public/arrays-intro-js.html
@@ -13,7 +13,7 @@
 		console.log(names_length);
 		// todo:
 		// Create log statements that will print each of the names array elements individually.
-		for (i = 0; i <= names_length; i++){
+		for (i = 0; i < names_length; i++){
 			console.log(names[i]);
 		}
 	</script>
