--- a/public/arrays-manipulating-js.html
+++ b/public/arrays-manipulating-js.html
@@ -16,38 +16,47 @@ function logPlanets() {
 
 console.log('Adding "The Sun" to the beginning of the planets array.');
 // todo: Do what the log statement above says you will do.
-logPlanets(planets.unshift('Sun'));
+planets.unshift('Sun');
+logPlanets();
 
 console.log('Adding "Pluto" to the end of the planets array.');
 // todo: Do what the log statement above says you will do.
-logPlanets(planets.push('Pluto'));
+planets.push('Pluto');
+logPlanets();
 
 console.log('Removing "The Sun" from the beginning of the planets array.');
 // todo: Do what the log statement above says you will do.
-logPlanets(planets.shift());
+planets.shift();
+logPlanets();
 
 console.log('Removing "Pluto" from the end of the planets array.');
 // todo: Do what the log statement above says you will do.
-logPlanets(planets.pop());
+planets.pop();
+logPlanets();
 
 console.log('Finding and logging the index of "Earth" in the planets array.');
 // todo: Do what the log statement above says you will do.
 var index = planets.indexOf('Earth');
+console.log("The index of Earth is " + index);
 console.log('Using splice to remove the planet after Earth.');
 // todo: Do what the log statement above says you will do.
-logPlanets(planets.splice(index + 1, 1));
+planets.splice(index + 1, 1);
+logPlanets();
 
 console.log('Using splice to add back the planet after Earth.');
 // todo: Do what the log statement above says you will do.
-logPlanets(planets.splice(index + 1, 0, 'Mars'));
+planets.splice(index + 1, 0, 'Mars');
+logPlanets();
 
 console.log('Reversing the order of the planets array.');
 // todo: Do what the log statement above says you will do.
-logPlanets(planets.reverse());
+planets.reverse();
+logPlanets();
 
 console.log('Sorting the planets array.');
 // todo: Do what the log statement above says you will do.
-logPlanets(planets.sort());
+planets.sort();
+logPlanets();
 
 	</script>
 </body>
