--- a/public/functions-intro-js.html
+++ b/public/functions-intro-js.html
@@ -10,7 +10,7 @@
 		// Create a function called 'sayHello' that takes a parameter 'name'.
 		// When called, the function should log a message that says hello from the passed in name.
 		function sayHello(name) {
-			console.log(myNameIs);
+			console.log("Hello from " + myNameIs);
 		}
 
 		// todo: Call the function 'sayHello' passing the variable 'myNameIs' as a parameter.
