Functions Intro in js

--- a/public/functions-intro-js.html
+++ b/public/functions-intro-js.html
@@ -24,7 +24,7 @@
 		// Create a function called 'isOdd' that takes a number as a parameter.
 		// The function should use the ternary operator to log a message.
 		function isOdd(number){
-			var result = (random % 2 == 0) ? console.log("The number passed (" + random + ") is even") : console.log("The number (" + random + ") is odd");
+			(random % 2 == 0) ? console.log("The number passed (" + random + ") is even") : console.log("The number (" + random + ") is odd");
 		}
 		// The log should tell the number passed in and whether it is odd or not.
 
