--- a/public/objects-intro-js.html
+++ b/public/objects-intro-js.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <html>
 <head>
 	<title></title>
@@ -12,7 +13,7 @@
 		// Add a say hello method to the person object that alerts hello using the firstName and lastName properties.
 		person.sayHello = function (){
 			alert('Hello ' + this.firstName + " " + this.lastName);
-		}
+		};
 		// Say hello from the person object.
 		person.sayHello();
 	</script>
