objects-json-js Completed Lesson

--- a/public/objects-json-js.html
+++ b/public/objects-json-js.html
@@ -16,24 +16,28 @@
 				"lastName": "Baker"
 				}
 			},
+
 			{"title": 'Learning to Code',
 			"author": {
 				"firstName": "Keith",
 				"lastName": "Knowns"
 				}
 			},
+
 			{"title": 'What Now',
 			"author": {
 				"firstName": "Chuck",
 				"lastName": "Lately"
 				}
 			},
+
 			{"title": 'Eat, Sleep, Code!',
 			"author": {
 				"firstName": "Walter",
 				"lastName": "Townsend"
 				}
 			},
+
 			{"title": 'Apple 101',
 			"author": {
 				"firstName": "K. J.",
@@ -55,7 +59,7 @@
 
 		books.forEach(logArrayElements);
 		// end loop here
-
+		// other method to get loop through books completed
 		// books.forEach(function (element, index, books){
 		//     console.log("Book #" + index);
 		//     console.log("Title: " + element.title);
