objects-json-js
corrected book numericals

--- a/public/objects-json-js.html
+++ b/public/objects-json-js.html
@@ -51,7 +51,7 @@
 
 		// Loop through the array of books using .forEach and print out the specified information about each one.
 		function logArrayElements(element, index, array){
-			console.log("Book #" + index);
+			console.log("Book #" + (index + 1));
 		    console.log("Title: " + element.title);
 		    console.log("Author: " + element.author.firstName + " " + element.author.lastName);
 		    console.log("---");
@@ -61,7 +61,7 @@
 		// end loop here
 		// other method to get loop through books completed
 		// books.forEach(function (element, index, books){
-		//     console.log("Book #" + index);
+		//     console.log("Book #" + (index + 1));
 		//     console.log("Title: " + element.title);
 		//     console.log("Author: " + element.author.firstName + " " + element.author.lastName);
 		//     console.log("---");
