objects-date-js.jtml
changed daters back to one date for the exercise

--- a/public/objects-date-js.html
+++ b/public/objects-date-js.html
@@ -20,11 +20,11 @@
 		console.log('Here is my birthday using vanilla js: ' + spelledOutMonth + " " + jsBirthday.getDay() + ", " + jsBirthday.getFullYear());
 
 		// create the date corresponding to your birthday using Moment.js.
-		var momentBirthday = moment("6-27-1967", "MM-DD-YYYY");
+		var momentBirthday = moment("6-5-1970", "MM-DD-YYYY");
 
 		// todo:
 		// Log your birthday in the format: January 1, 2014 using Moment.js.
-		console.log('Here is my birthday using Moment.js: ' + momentBirthday.format('MMMM DD, YYYY'));
+		console.log('Here is my birthday using Moment.js: ' + momentBirthday.format('MMMM D, YYYY'));
 	</script>
 </body>
 </html>
