--- a/public/css-selectors.html
+++ b/public/css-selectors.html
@@ -35,7 +35,7 @@
         selector for all "anchor" elements
         that are a direct child of an element with class="article" 
         */
-      .article a {
+      .article>a {
         float:right;
       }
 
