HTML and CSS exercise
completed lesson by creating a class to modify each div vs modifying
the div.

--- a/public/css-box-model.html
+++ b/public/css-box-model.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Box Model Exercise</title>
 	<style>
-		div {
+		.box {
 			height: 50px;
 			width: 150px;
 			margin-top: 10px;
@@ -19,24 +19,24 @@
 			font-weight: bold;
 		}
 		#orange {
-			background-color: #ffa528 ;
+			background-color: #FFA528 ;
 			margin-left: 30px;
 
 		}
 		#yellow {
-			background-color: #fff41e;
+			background-color: #FFF41E;
 			margin-left: 60px;
 		}
 		#green {
-			background-color: #179e0f;
+			background-color: #0F0;
 			margin-left: 90px;
 		}
 		#blue{
-			background-color: #4b4eff;
+			background-color: #00F;
 			margin-left: 120px;
 		}
 		#violet{
-			background-color: #ef3bff;
+			background-color: #F0F;
 			margin-left: 150px;
 		}
 
@@ -44,22 +44,22 @@
 </head>
 <body>
 	<h1><a href="http://en.wikipedia.org/wiki/Visible_spectrum">Visible Spectrum Wavelengths</a></h1>
-		<div>
+		<div class="box">
 			<p>620-750 nm</p>
 		</div>
-		<div id="orange">
+		<div class="box" id="orange">
 			<p>590-620 nm</p>
 		</div>
-		<div id="yellow">
+		<div class="box" id="yellow">
 			<p>570-590 nm</p>
 		</div>
-		<div id="green">
+		<div class="box" id="green">
 			<p>495-570 nm</p>
 		</div>
-		<div id="blue">
+		<div class="box" id="blue">
 			<p>450-495 nm</p>
 		</div>
-		<div id="violet">
+		<div class="box" id="violet">
 			<p>380-450 nm</p>
 		</div>
 
