color_picker Turn your mouse into an "eye dropper tool"
experiment with stack overflow code

--- a/public/color_picker.html
+++ b/public/color_picker.html
@@ -8,7 +8,7 @@
 <canvas id="myCanvas" width="400" height="400" style="border:1px solid #c3c3c3;">
 
 </canvas>
-<script src="jquery.js"></script>
+<script src='jquery/jquery.js'></script>
 <!-- NEED LOCATION OF JQUERY FILE -->
 <script type="text/javascript">
     window.onload = function(){
