--- a/public/resume.html
+++ b/public/resume.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Resume</title>
+	<title>Resum&#233</title>
 
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/css/resume_site.css">
+	<link rel="stylesheet" href="css/resume_site.css">
 	<script src="/js/bootstrap.min.js"></script>
 	<nav class="navbar navbar-inverse" role="navigation">
 
@@ -28,7 +28,7 @@
 	      <ul class="nav navbar-nav">
 	        <li class="active"><a href="#">Home</a></li>
 	        <li><a href="#">Portfolio</a></li>
-	         <li><a href="#">Resume</a></li>
+	         <li><a href="#">Resum&#233</a></li>
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
 	          <ul class="dropdown-menu">
@@ -42,12 +42,7 @@
 	          </ul>
 	        </li>
 	      </ul>
-	      <form class="navbar-form navbar-left" role="search">
-	        <div class="form-group">
-	          <input type="text" class="form-control" placeholder="Search">
-	        </div>
-	        <button type="submit" class="btn btn-default">Submit</button>
-	      </form>
+	      
 	      <ul class="nav navbar-nav navbar-right">
 	        <li><a href="#">GitHub</a></li>
 	        <!-- <li class="dropdown">
@@ -83,14 +78,14 @@
 		  <hr>
 		  <dt>Education</dt>
 		  <dd>LAMP+J Software Development Bootcamp</dd>
-		  <dd>Codeup</dd>
+		  <dd id="Codeup">Codeup</dd>
 		  <dd>San Antonio, Texas</dd>
 		</dl>	
 	</div>
-	<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+	<nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
   <div class="container">
   	<p></p>
-    <p>&copy; 2014 Mike Tamburo.  All rights reserved.</p>
+    <p class="whiteletters">&copy; 2014 Mike Tamburo.  All rights reserved.</p>
   </div>
 </nav>
 </body>
