Resume Styling Experiment

--- a/public/resume.html
+++ b/public/resume.html
@@ -7,9 +7,10 @@
 	<title>Resum&#233</title>
 
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/resume_site.css">
-	<script src="/js/bootstrap.min.js"></script>
-	<nav class="navbar navbar-inverse" role="navigation">
+	
+	<link href="css/resume_site.css" rel="stylesheet">
+	
+	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 
 	  <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
@@ -20,7 +21,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="#">Mike Tamburo</a>
+	      <a class="navbar-brand" href="#">Michael Tamburo</a>
 	    </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -62,13 +63,13 @@
 </head>
 <body>
 	<div class="container">
-		<h2>Mike Tamburo <em> <small>Junior Software Developer</small></em></h2>
+		<h2>Michael Tamburo <em> <small>Junior Software Developer</small></em></h2>
 	</div>
 	<div class="container">
 		<dl class="dl-horizontal">
 		  <dt>Contact</dt>
-		  <dd>Mike Tamburo</dd>
-		  <dd>mi@gmail.com</dd>
+		  <dd>Michael Tamburo</dd>
+		  <dd>michael.tamburo@gmail.com</dd>
 		  <hr>
 		  <dt>Work Experience</dt>
 		  <dd>Job 1</dd>
@@ -77,16 +78,19 @@
 		  <dd>Job 4</dd>
 		  <hr>
 		  <dt>Education</dt>
-		  <dd>LAMP+J Software Development Bootcamp</dd>
-		  <dd id="Codeup">Codeup</dd>
+		  <dd><strong>LAMP+J Software Development Bootcamp<strong></dd>
+		  <dd id="Codeup"><em>Codeup</em></dd>
 		  <dd>San Antonio, Texas</dd>
 		</dl>	
 	</div>
-	<nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+	<nav class="navbar navbar-inverse" role="navigation">
   <div class="container">
   	<p></p>
-    <p class="whiteletters">&copy; 2014 Mike Tamburo.  All rights reserved.</p>
+    <p class="whiteletters"><small>&copy; 2014 Mike Tamburo.  All rights reserved.</small></p>
   </div>
 </nav>
+ 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="css/bootstrap-3.1.1/js/bootstrap.min.js"></script>
+    <script src="css/bootstrap-3.1.1/docs/assets/js/docs.min.js"></script>
 </body>
 </html>
