--- a/public/resume.html
+++ b/public/resume.html
@@ -8,8 +8,10 @@
 
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	
-	<link href="css/resume_site.css" rel="stylesheet">
-	
+	<link href="css/resume_site.css" rel="stylesheet">	
+</head>
+<!-- Main body of document -->
+<body>
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 
 	  <div class="container-fluid">
@@ -46,49 +48,60 @@
 	      
 	      <ul class="nav navbar-nav navbar-right">
 	        <li><a href="#">GitHub</a></li>
-	        <!-- <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li> -->
-	          <!--   <li class="divider"></li>
-	            <li><a href="#">Separated link</a></li> -->
-	          </ul>
-	        </li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
-</head>
-<body>
-	<div class="container">
+<div class="container main-content">
+	<div class="padding" class="container">
 		<h2>Michael Tamburo <em> <small>Junior Software Developer</small></em></h2>
 	</div>
 	<div class="container">
-		<dl class="dl-horizontal">
-		  <dt>Contact</dt>
-		  <dd>Michael Tamburo</dd>
-		  <dd>michael.tamburo@gmail.com</dd>
+		<div class="row">
+			<dl class="dl-horizontal">
+			  <dt>Contact</dt>
+			  <dd>Michael Tamburo</dd>
+			  <dd>michael.tamburo@gmail.com</dd>
+			</dl>
 		  <hr>
-		  <dt>Work Experience</dt>
-		  <dd>Job 1</dd>
-		  <dd>Job 2</dd>
-		  <dd>Job 3</dd>
-		  <dd>Job 4</dd>
+		</div>
+		<div class="row">
+			<dl class="dl-horizontal">
+			  <dt>Experience</dt>
+			  <dd>Job 1</dd>
+			  <dd>Job 2</dd>
+			  <dd>Job 1</dd>
+			  <dd>Job 2</dd>
+			  <dd>Job 1</dd>
+			  <dd>Job 2</dd>
+			  <dd>Job 1</dd>
+			  <dd>Job 2</dd>
+			  <dd>Job 1</dd>
+			  <dd>Job 2</dd>
+			  <dd>Job 1</dd>
+			  <dd>Job 2</dd>
+			  <dd>Job 1</dd>
+			  <dd>Job 2</dd>
+			</dl>
 		  <hr>
-		  <dt>Education</dt>
-		  <dd><strong>LAMP+J Software Development Bootcamp<strong></dd>
-		  <dd id="Codeup"><em>Codeup</em></dd>
-		  <dd>San Antonio, Texas</dd>
-		</dl>	
+		</div>
+		<div class="row">
+			<dl class="dl-horizontal">
+			  <dt>Education</dt>
+			  <dd><strong>LAMP+J Software Development Bootcamp<strong></dd>
+			  <dd id="Codeup"><em>Codeup</em></dd>
+			  <dd>San Antonio, Texas</dd>
+			</dl>
+		  <hr>
+		</div>
 	</div>
 	<nav class="navbar navbar-inverse" role="navigation">
-  <div class="container">
-  	<p></p>
-    <p class="whiteletters"><small>&copy; 2014 Mike Tamburo.  All rights reserved.</small></p>
-  </div>
-</nav>
+	  <div class="container">
+	  	<p></p>
+	    <p class="whiteletters"><small>&copy; 2014 Mike Tamburo.  All rights reserved.</small></p>
+	  </div>
+    </nav>
+</div>
  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="css/bootstrap-3.1.1/js/bootstrap.min.js"></script>
     <script src="css/bootstrap-3.1.1/docs/assets/js/docs.min.js"></script>
