--- a/public/resume.html
+++ b/public/resume.html
@@ -7,10 +7,10 @@
 	<title>Resum&#233</title>
 
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
-	
+	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 	<link href="css/resume_site.css" rel="stylesheet">	
 </head>
-<!-- Main body of document -->
+<!-- ================ Main body of document ====================================-->
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 
@@ -23,7 +23,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="#">Michael Tamburo</a>
+	      <a class="navbar-brand" href="#">Michael Tamburo Resum&#233</a>
 	    </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -31,30 +31,42 @@
 	      <ul class="nav navbar-nav">
 	        <li class="active"><a href="#">Home</a></li>
 	        <li><a href="#">Portfolio</a></li>
-	         <li><a href="#">Resum&#233</a></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	            <li class="divider"></li>
-	            <li><a href="#">One more separated link</a></li>
-	          </ul>
-	        </li>
 	      </ul>
-	      
+
 	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="#">GitHub</a></li>
-	      </ul>
+	          <li>
+	            <a href="https://github.com/miketamburo/codeup_exercises">
+	              <i class="fa fa-github-square fa-2x"></i>
+	            </a>
+	          </li>
+	          <li>
+	            <a href="http://www.facebook.com/">
+	              <i class="fa fa-facebook-square fa-2x"></i>
+	            </a>
+	          </li>
+	          <li>
+	            <a href="http://www.twitter.com/">
+	              <i class="fa fa-twitter-square fa-2x"></i>
+	            </a>
+	          </li>
+	          <li>
+	            <a href="http://www.linkedin.com/">
+	              <i class="fa fa-linkedin-square fa-2x"></i>
+	            </a>
+	          </li>
+	          <li>
+	            <a href="mailto:michael.tamburo@gmail.com">
+	              <i class="fa fa-envelope fa-2x"></i>
+	            </a>
+	          </li>
+          </ul>
+
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
 <div class="container main-content">
 	<div class="padding" class="container">
-		<h2>Michael Tamburo <em> <small>Junior Software Developer</small></em></h2>
+		<h2>Michael Tamburo</h2><h3><em>Software Developer<em></h3>
 	</div>
 	<div class="container">
 		<div class="row">
@@ -85,16 +97,17 @@
 			</dl>
 		  <hr>
 		</div>
+
 		<div class="row">
 			<dl class="dl-horizontal">
 			  <dt>Education</dt>
 			  <dd><strong>LAMP+J Software Development Bootcamp<strong></dd>
-			  <dd id="Codeup"><em>Codeup</em></dd>
+			  <dd><a href="http://www.codeup.com/">Codeup</a><br></dd>
 			  <dd>San Antonio, Texas</dd>
 			</dl>
-		  <hr>
 		</div>
 	</div>
+<!-- =================NAV BAR ==========================================-->
 	<nav class="navbar navbar-inverse" role="navigation">
 	  <div class="container">
 	  	<p></p>
@@ -102,8 +115,10 @@
 	  </div>
     </nav>
 </div>
+<!-- ==================== Script References =========================== -->
  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="css/bootstrap-3.1.1/js/bootstrap.min.js"></script>
     <script src="css/bootstrap-3.1.1/docs/assets/js/docs.min.js"></script>
+
 </body>
 </html>
