--- a/public/resume.html
+++ b/public/resume.html
@@ -8,6 +8,7 @@
 
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+	<!-- <link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'> -->
 	<link href="css/resume_site.css" rel="stylesheet">	
 </head>
 <!-- ================ Main body of document ====================================-->
@@ -23,7 +24,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="#">Michael Tamburo Resum&#233</a>
+	      <a class="navbar-brand" href="mailto:michael.tamburo@gmail.com"><em>Michael Tamburo Resum&#233</em></a>
 	    </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -66,44 +67,51 @@
 	</nav>
 <div class="container main-content">
 	<div class="padding" class="container">
-		<h2>Michael Tamburo</h2><h3><em>Software Developer<em></h3>
+		<h2 class="arizona">Michael Tamburo</h2>
+		
+		<h3><i class="fa fa fa-cog fa-spin"></i>&nbsp&nbsp<em>Inventor</em>&nbsp&nbsp<i class="fa fa-spinner fa-spin"></i>&nbsp<em>Junior Software Developer</em>&nbsp&nbsp<i class="fa fa-repeat fa-spin"></i>&nbsp<em>Entrepreneur</em></h3>
 	</div>
+	<hr>
+	
 	<div class="container">
 		<div class="row">
 			<dl class="dl-horizontal">
-			  <dt>Contact</dt>
-			  <dd>Michael Tamburo</dd>
-			  <dd>michael.tamburo@gmail.com</dd>
+			  <dt><h2><strong>Contact</strong></h2></dt>
+				  <dd><h4>Michael Tamburo</h4></dd>
+				  <dd><a href="mailto:michael.tamburo@gmail.com"><h4>michael.tamburo@gmail.com</h4></a></dd>
 			</dl>
 		  <hr>
 		</div>
+		
 		<div class="row">
 			<dl class="dl-horizontal">
-			  <dt>Experience</dt>
-			  <dd>Job 1</dd>
-			  <dd>Job 2</dd>
-			  <dd>Job 1</dd>
-			  <dd>Job 2</dd>
-			  <dd>Job 1</dd>
-			  <dd>Job 2</dd>
-			  <dd>Job 1</dd>
-			  <dd>Job 2</dd>
-			  <dd>Job 1</dd>
-			  <dd>Job 2</dd>
-			  <dd>Job 1</dd>
-			  <dd>Job 2</dd>
-			  <dd>Job 1</dd>
-			  <dd>Job 2</dd>
+			  <dt><h2><strong>Experience</strong></h2></dt>
+				  <dd><h4><strong>Director of the Secretary of the Air Force's, Chief Information Officer's critical integration operating location.  Developed innovative architectures, tactics, and system-of-systems to solve integration shortfalls and urgent requirements.  Improved digital architectures, critical information networking, and procedures to enhance integrated space, air, and terrestrial assets.</strong></h4></dd>
+				  <br>
+				  <dd><h4><strong>7+ years as senior advisor on aerospace vehicles, space vehicle design projects, communication architectures, rapid prototyping, and associated contract management.</strong></h4></dd>
+				  <br>
+				  <dd><h4><strong>7+ years in project application development and resource management</strong></h4></dd>
+				  <br>
+				  <dd><h4><strong>20+ years in commercial aviation operations and technology</strong></h4></dd>
+				  <br>
+				  <dd><h4><strong>Graduate level adjunct professor of space vehicle design curriculum - Embry-riddle Aeronautical University</strong></h4></dd>
 			</dl>
 		  <hr>
 		</div>
 
 		<div class="row">
 			<dl class="dl-horizontal">
-			  <dt>Education</dt>
-			  <dd><strong>LAMP+J Software Development Bootcamp<strong></dd>
-			  <dd><a href="http://www.codeup.com/">Codeup</a><br></dd>
-			  <dd>San Antonio, Texas</dd>
+			  <dt><h2><strong>Education</strong></h2></dt>
+				  <dd><h4><strong>LAMP+J Software Development<strong></h4></dd>
+				  <dd><h4><a href="http://www.codeup.com/">Codeup</a></h4></dd>
+				  <dd><h4>San Antonio, Texas</h4></dd>
+				  <br>
+				  <dd><h4><strong>Master of Aeronautical Science - Aeronautics Specialization</strong></h4></dd>
+				  <dd><h4>Embry-Riddle Aeronautical University</h4></dd>
+				  <br>
+				  <dd><h4><strong>Bachelor of Science General Engineering</strong></h4></dd>
+				  <dd><h4>United States Air Force Academy</h4></dd>
+				  <dd><h4>Colorado Springs, Colorado</h4></dd>
 			</dl>
 		</div>
 	</div>
@@ -111,7 +119,7 @@
 	<nav class="navbar navbar-inverse" role="navigation">
 	  <div class="container">
 	  	<p></p>
-	    <p class="whiteletters"><small>&copy; 2014 Mike Tamburo.  All rights reserved.</small></p>
+	    <p class="whiteletters"><small>&copy; 2014 Michael Tamburo.  All rights reserved.</small></p>
 	  </div>
     </nav>
 </div>
