--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="/css/bootstrap-3.1.1/docs/assets/ico/favicon.ico">
 	<link href="/css/bootstrap-3.1.1/css/bootstrap.min.css" rel="stylesheet" >
 	<link href="/css/bootstrap-3.1.1/docs/examples/carousel/carousel.css" rel="stylesheet">
+	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 	<link href="/css/portfolio_site.css" rel="stylesheet">
 </head>
 <!-- NAVBAR ============================================================================ -->
@@ -25,12 +26,12 @@
           <div class="container">
 
             <div class="navbar-header">
-              <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-              </button><a class="navbar-brand" href="#">Michael Tamburo</a> -->
+              </button><a class="navbar-brand" href="#">Michael Tamburo</a>
             </div>
             <!-- End of navbar header ===========-->
             <div class="navbar-collapse collapse">
@@ -38,22 +39,39 @@
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#profile">Profile</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#education">Education</a></li>
+                <li><a href="#resume">Resum&#233</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-	                  <ul class="dropdown-menu">
-	                    <li><a href="#">Action</a></li>
-	                    <li><a href="#">Another action</a></li>
-	                    <li><a href="#">Something else here</a></li>
-	                    <li class="divider"></li>
-	                    <li class="dropdown-header">Nav header</li>
-	                    <li><a href="#">Separated link</a></li>
-	                    <li><a href="#">One more separated link</a></li>
-	                  </ul>
-                </li>
               </ul>
+
+              <ul class="nav navbar-nav navbar-right">
+		          <li>
+		            <a href="https://github.com/miketamburo/codeup_exercises">
+		              <i class="fa fa-github-square fa-2x"></i>
+		            </a>
+		          </li>
+		          <li>
+		            <a href="http://www.facebook.com/">
+		              <i class="fa fa-facebook-square fa-2x"></i>
+		            </a>
+		          </li>
+		          <li>
+		            <a href="http://www.twitter.com/">
+		              <i class="fa fa-twitter-square fa-2x"></i>
+		            </a>
+		          </li>
+		          <li>
+		            <a href="http://www.linkedin.com/">
+		              <i class="fa fa-linkedin-square fa-2x"></i>
+		            </a>
+		          </li>
+		          <li>
+		            <a href="mailto:michael.tamburo@gmail.com">
+		              <i class="fa fa-envelope fa-2x"></i>
+		            </a>
+		          </li>
+          	  </ul>
+
             </div>
             <!-- End of navbar collapse info ===========-->
           </div><!-- /. container ========-->
@@ -74,29 +92,29 @@
 
       <div class="carousel-inner">
         <div class="item active">
-          <img src="img/mike_at_work.jpeg" class="img-responsive" alt="Elite">
+          <img src="img/mike_at_work.jpg" alt="Elite">
           <div class="container">
             <div class="carousel-caption">
               <h1>Elite</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+              <p class="shadow">Proven performance - dependible execution.</p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img data-src="holder.js/900x500/auto/#666:#6a6a6a/text:Creative" alt="Creative">
+          <img src="img/space_shuttle.jpg" alt="Creative">
           <div class="container">
             <div class="carousel-caption">
               <h1>Creative</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p class="shadow">Seeking Wisdom -- Creating Solutions</p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img data-src="holder.js/900x500/auto/#555:#5a5a5a/text:Experience" alt="Experienc">
+          <img src="img/fighter_pilot.jpg" alt="Experienc">
           <div class="container">
             <div class="carousel-caption">
               <h1>Experience</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p class="shadow">Forward thinking <em>Team Player</em> bringing technologies together for a greater purpose.</p>
             </div>
           </div>
         </div>
@@ -137,19 +155,7 @@
       </div><!-- /.row -->
 
       <!-- START OF THE FEATURETTES =========================================-->
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-        </div>
-      </div>
-
+      <p><a id="profile"></a></p>
       <hr class="featurette-divider">
 
       <div class="row featurette">
@@ -162,6 +168,33 @@
         </div>
       </div>
 
+      <p><a id="skills"></a></p>
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">First featurette heading.<span class="text-muted">It'll blow your mind.</span></h2>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+        </div>
+      </div>
+
+      <p><a id="experience"></a></p>
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+        </div>
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+      </div>
+
+      <p><a id="contact"></a></p>
       <hr class="featurette-divider">
 
       <div class="row featurette">
