--- a/public/palit_experiment.html
+++ b/public/palit_experiment.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Michael Tamburo's Portfolio">
+    <meta name="description" content="Pal it">
     <meta name="author" content="Michael Tamburo">
     
 	<title>Pal it!</title>
