js-dom-query completed lesson - access to dom

--- a/public/js-dom-query.html
+++ b/public/js-dom-query.html
@@ -38,14 +38,14 @@
         // todo: get all list items
         var listItems = document.getElementsByTagName('li');
 
-        // todo: set text color on every other list item to grey
         for (var i = 0; i < listItems.length; i++){
         	var data = listItems[i].attributes['data-dbid'].value;
         	
         // todo: set text color of li with dbid = 1 to blue
-        	if (data == 1){
+        	if (data == '1'){
         		listItems[i].style['color'] = 'blue';
         	} else if (data % 2 == 0){
+        // todo: set text color on every other list item to grey
         		listItems[i].style['color'] = 'grey';
         	}
         }
