Blackjack - converting php to html - added responsive img control

--- a/public/blackjack.html
+++ b/public/blackjack.html
@@ -43,9 +43,13 @@
         <!-- End of Navbar features ================-->
       </div>
     </div><!-- End of Navbar Wrapper =================-->
-<div class="continer-fluid">
-	<img class="img-responsive" class="padding" src="img/Blackjack_Table.jpg">
+<div class="continer-fluid" class="main-content">
+	<img class="img-responsive visible-lg visible-lg" src="img/Blackjack_Table_lg.jpg">
+	<img class="img-responsive visible-md visible-md" src="img/Blackjack_Table_md.jpg">
+	<img class="img-responsive visible-sm visible-sm" src="img/Blackjack_Table_sm.jpg">
+	<img class="img-responsive visible-xs visible-xs" src="img/Blackjack_Table_xs.jpg">
 </div>	
+
 <!-- ==========================GAME SCRIPT ================================ -->    
 	<script>
 		// blackjack game
