--- a/public/js-dom-query.html
+++ b/public/js-dom-query.html
@@ -11,6 +11,7 @@
 <body>
 
     <h1 id="main-header">Hello World!</h1>
+    <button id="chgMainHeader">Change Main Header</button>
     <ul>
         <li data-dbid="1">Item 1</li>
         <li data-dbid="2">Item 2</li>
@@ -18,43 +19,70 @@
         <li data-dbid="4">Item 4</li>
         <li data-dbid="5">Item 5</li>
     </ul>
+    <button id="btn2">Change Item colors</button>
+    <p></p>
+
+    <button id="btn3">Set sub header to blue</button>
+
     <h2 id="sub-header">Hello Again.</h2>
     <p class="sub-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+    <button id="btn4">Change Paragraph Wording</button>
     <script>
 
-        // todo: get the main header element by id
-        var mainHeader = document.getElementById('main-header');
-
         // todo: set inner html of mainHeader to "JavaScript is Cool"
-        mainHeader.innerHTML = "JavaScript is Cool";
-
-        // todo: get the sub header element by id
-        var subHeader = document.getElementById('sub-header');
-
-        // todo: set the text color of subHeader to blue
-        subHeader.style['color'] = "blue";
-
-        // todo: get all list items
-        var listItems = document.getElementsByTagName('li');
-
-        for (var i = 0; i < listItems.length; i++){
-        	var data = listItems[i].attributes['data-dbid'].value;
-        	
-        // todo: set text color of li with dbid = 1 to blue
-        	if (data == '1'){
-        		listItems[i].style['color'] = 'blue';
-        	} else if (data % 2 == 0){
-        // todo: set text color on every other list item to grey
-        		listItems[i].style['color'] = 'grey';
-        	}
+        var listener1 = function() {
+            document.getElementById('main-header').innerHTML = "JavaScript is Cool";
         }
 
-        // todo: get all elements with class name sub-paragraph
-        var subParagraphs = document.getElementsByClassName('sub-paragraph');
+        // todo: get the main header element by id
+        var chgMainHeader = document.getElementById('chgMainHeader');
+        chgMainHeader.addEventListener('click', listener1, false);
 
-        // todo: change the text in the first sub paragraph to "Mission Accomplished!"
-        subParagraphs[0].innerHTML = "Mission Accomplished!";
+
+        // todo: get all list items
+        var listener2 = function (){
+
+            var listItems = document.getElementsByTagName('li');
+
+            for (var i = 0; i < listItems.length; i++){
+                var data = listItems[i].attributes['data-dbid'].value;
+                
+            // todo: set text color of li with dbid = 1 to blue
+                if (data == '1'){
+                    listItems[i].style['color'] = 'blue';
+                } else if (data % 2 == 0){
+            // todo: set text color on every other list item to grey
+                    listItems[i].style['color'] = 'grey';
+                }
+            }
+        }
+
+        var btn2 = document.getElementById('btn2');
+        btn2.addEventListener('click', listener2, false);
+
+        var listener3 = function() {
+            // todo: get the sub header element by id
+            var subHeader = document.getElementById('sub-header');
+
+            // todo: set the text color of subHeader to blue
+            subHeader.style['color'] = "blue";
+        }
+
+        var btn3 = document.getElementById('btn3');
+        btn3.addEventListener('click', listener3, false);
+
+
+        // todo: get all elements with class name sub-paragraph
+        var listener4 = function() {
+            var subParagraphs = document.getElementsByClassName('sub-paragraph');
+
+            // todo: change the text in the first sub paragraph to "Mission Accomplished!"
+            subParagraphs[0].innerHTML = "Mission Accomplished!";   
+        }
+
+        var btn4 = document.getElementById('btn4');
+        btn4.addEventListener('click', listener4, false);
+
 
     </script>
 
